fix emojis getting cut off at the bottom

--- a/src/components/Post/AddComment/AddComment.css
+++ b/src/components/Post/AddComment/AddComment.css
@@ -1,3 +1,7 @@
+.comment-box {
+  position: relative;
+}
+
 .add-comment {
   padding: 8px 16px;
   display: flex;
@@ -19,20 +23,18 @@
   height: inherit;
 }
 
-.add-comment textarea {
+.add-comment input {
+  width: 100%;
   background: 0 0;
   border: 0;
   display: flex;
   flex-grow: 1;
   color: rgb(38, 38, 38);
-  height: 18px;
+  height: 21px;
   outline: 0;
   padding: 0;
   margin-left: 8px;
-  width: 0;
-  resize: none;
   font-size: 16px;
-  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -48,8 +50,6 @@
   height: auto;
   margin: auto;
   color: rgba(0, 149, 246, 1);
-  display: inline;
-  position: relative;
   cursor: pointer;
 }
 
